--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import 'bootstrap/dist/css/bootstrap.min.css';
 @import 'bootstrap-icons/font/bootstrap-icons.css';
 
-main {
+/* main {
     height: 85vh;
-}
+} */
